Closed Bug 869222 Opened 13 years ago Closed 13 years ago

Fix post barriers on the IonScript's fields

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla23

People

(Reporter: terrence, Assigned: terrence)

References

Details

Attachments

(1 file, 1 obsolete file)

Attached patch v0 (obsolete) — Splinter Review
IonScripts normally live as long as their owner JSScript; however, they can occasionally get destroyed outside the context of a GC by FinishInvalidationOf. Because of this case, we cannot use the normal store buffer to guard them. Instead we use the generic buffer to mark the owner script, which will mark the IonScript's fields, if it is still alive.
Attachment #746116 - Flags: review?(dvander)
Attachment #746116 - Flags: review?(dvander) → review+
Attachment #746116 - Attachment is obsolete: true
Attachment #747051 - Flags: review+
Whiteboard: [checkin-needed]
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla23
Depends on: 880816
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: