Bug 869222 - Allow GC things embedded in IonScript to move. r=dvander

IonScripts normally live as long as their owner JSScript; however, they can
occasionally get destroyed outside the context of a GC by FinishInvalidationOf.
Because of this case, we cannot use the normal store buffer to guard them.
Instead we use the generic buffer to mark the owner script, which will mark the
IonScript's fields, if it is still alive.